Fix Our Gallery page Ui (Image & Video hight, width and alignment)

--- a/Frontend/src/pages/gallery/allGallery/index.scss
+++ b/Frontend/src/pages/gallery/allGallery/index.scss
@@ -8,10 +8,11 @@
   grid-auto-rows: 20vw;
   justify-content: center;
   align-content: center;
+  padding: 0 85px;
 
   .videoFrame {
     video {
-      height: 343px !important;
+      height: 308px !important;
       object-fit: cover;
     }
   }
@@ -20,6 +21,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding: 0 4px;
     .videoFrame {
       width: 100% !important;
       height: auto !important;
