--- a/Frontend/src/pages/gallery/video/index.scss
+++ b/Frontend/src/pages/gallery/video/index.scss
@@ -2,12 +2,14 @@
 .video-align {
   display: grid;
   gap: 20px;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(1, 20vw);
   grid-auto-rows: 20vw;
+  grid-auto-columns: 1fr;
+  padding: 0 85px;
   .videoFrame {
     video {
-      height: 373px !important;
+      width: 455px;
       object-fit: cover;
     }
   }
@@ -15,6 +17,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding: 0 4px;
     .videoFrame {
       width: 100% !important;
       height: auto !important;
